--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "consolidate": "^0.15.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "ejs": "^3.1.3",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
+    "mustache": "^4.0.1",
     "nodemon": "^2.0.4"
   }
 }
